fixed navbar behind items

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,9 +14,19 @@
 .addComment-form,
 .addSnippet-form
  {
+  padding: auto;
   display: flex;
   flex-direction: column;
   background-color: #333;
+}
+
+.snippet-container {
+  display: flex;
+  flex-direction: column;
+  align-items: right;
+  width: 100%;
+  height: 100%;
+  padding: auto;
 }
 
   .form-container {
@@ -64,11 +74,13 @@ button {
   text-decoration: underline;
 }
 .navbar {
+  text-align: right;
   overflow: hidden;
   background-color: #333;
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .input-field textarea{
@@ -82,4 +94,13 @@ button {
 }
 .input-field input {
   color: white;
+}
+code{
+  text-align: left;
+  background-color: #333;
+  color: white;
+  padding: 1rem;
+  border-radius: 10px;
+  margin: 1rem 0;
+  display: block;
 }
